2004-10-19  Johan Dahlin  <johan@gnome.org>

	* data/glade/admin.glade:
	* data/glade/wizard_source.glade:
	* flumotion/admin/gtk/client.py:
	* flumotion/wizard/enums.py:
	* flumotion/wizard/save.py:
	* flumotion/wizard/steps.py:

	Remove some broken stuff in the admin interface.
	Improve the wizard, it was quite broken.
	
2004-10-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion.spec.in:
	* flumotion/manager/main.py:
	  moved pem, fixed an oops

2004-10-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* conf/Makefile.am:
	* doc/redhat/flu-manager:
	* flumotion.spec.in:
	  fix dist

2004-10-19  Johan Dahlin  <johan@gnome.org>

	* configure.ac:
	* flumotion/component/muxers/ogg.py:
	* flumotion/component/producers/Makefile.am:
	* flumotion/component/producers/dv/Makefile.am:
	* flumotion/component/producers/dv/__init__.py:
	* flumotion/component/producers/dv/dv.py:
	* flumotion/component/producers/dv/dv.xml:
	* flumotion/component/producers/firewire/Makefile.am:
	* flumotion/component/producers/firewire/__init__.py:
	* flumotion/component/producers/firewire/firewire.py:
	* flumotion/component/producers/firewire/firewire.xml:

	Remove dv component and add firewire
	
2004-10-19  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/producers/audiotest/audiotest.py:
	* flumotion/component/producers/audiotest/audiotest.xml:

	Add freq property.
	
2004-10-19  Johan Dahlin  <johan@gnome.org>

	* data/image/wizard/Makefile.am:
	* data/image/wizard/summary.png:
	* flumotion/wizard/steps.py:

	Add summary icon and fix small regression.
	
2004-10-19  Johan Dahlin  <johan@gnome.org>

	* flumotion/test/Makefile.am:
	* flumotion/test/test_workerconfig.py:
	* flumotion/worker/Makefile.am:
	* flumotion/worker/config.py:

	Add worker configuration and testsuite

2004-10-19  Wim Taymans  <wim@fluendo.com>

	* flumotion/manager/main.py:
	Fix typos and copy-and-paste errors.

2004-10-19  Johan Dahlin  <johan@gnome.org>
