@@ -1,3 +1,7 @@
 SUBDIRS = reference
 
-EXTRA_DIST = redhat/flu-manager redhat/flu-worker
+EXTRA_DIST = \
+	redhat/init.d/flu-manager \
+	redhat/init.d/flu-worker \
+	redhat/sysconfig/flumotion-manager \
+	redhat/sysconfig/flumotion-worker
