@@ -1,0 +1,2 @@
+# by default we are insecure so only allow from localhost
+OPTIONS="-v -H localhost"
